--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,23 +1,29 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>List</ion-title>
+    <ion-title>All Patient List</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-start></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-end>
-        {{item.note}}
-      </div>
-    </button>
+  <ion-card>
+    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  </ion-card>
+  <ion-list *ngFor="let item of items;let i=index">
+    <ion-card>
+      <ion-item>
+        <strong>Patient Name:</strong>{{item.name}}
+      </ion-item>
+      <ion-item>
+        <strong>Disease:</strong> {{item.disease}}
+      </ion-item>
+      <ion-item>
+        <strong>Date</strong> {{item.date}}
+      </ion-item>
+      <button ion-button block color="secondary" (click)="itemTapped(item)">showdetails</button>
+    </ion-card>
+
   </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
 </ion-content>
